fix seguridad